Searching EDCAT on a fixed path

--- a/public/templates/edcatDatasets.html
+++ b/public/templates/edcatDatasets.html
@@ -24,6 +24,7 @@
     <div class="dataset" ng-repeat="dataset in datasets">
       <h2>{{dataset.title}}</h2>
       <p>{{dataset.description}}</p>
+      <p>Find me at <a href="{{dataset.uri}}">{{dataset.uri}}</a>.</p>
       <hr />
     </div>
   </div>
