making the edcat service configurable

--- a/public/templates/edcatDatasets.html
+++ b/public/templates/edcatDatasets.html
@@ -14,6 +14,12 @@
         </div>
       </div>
     </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">EDCAT source</div>
+      <div class="panel-body">
+        <input type="text" class="form-control" ng-model="baseURL" placeholder="edcat base domain" />
+      </div>
+    </div>
   </div>
 
   <!-- right col -->
